[xmp] Add CoreAudio sound driver
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -20,6 +20,7 @@ DIST		= xmp-$(VERSION)
 DFILES		= README INSTALL configure configure.ac Makefile.in
 DDIRS		= src drivers
 V		= 0
+DRIVER		= @SOUND_DRIVER@
 
 all: binaries
 
