[xmp] Minor adjustments in distribution package
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -18,14 +18,13 @@ SHELL		= /bin/sh
 
 DIST		= xmp-$(VERSION)
 DFILES		= README INSTALL configure configure.ac Makefile.in
-DDIRS		= src drivers
+DDIRS		= src
 V		= 0
 DRIVER		= @SOUND_DRIVER@
 
 all: binaries
 
 include src/Makefile
-include src/drivers/Makefile
 
 CFLAGS += -I. -DVERSION=\"$(VERSION)\"
 
