--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 VERSION	= 3.9.0
 
 CC		= @CC@
-CFLAGS		= -c -Wall @CFLAGS@ @DEFS@ @CPPFLAGS@
+CFLAGS		= -c -Wall @CFLAGS@ @DEFS@ @CPPFLAGS@ -DSOUND_DRIVER=$(DRIVER)
 LD		= @CC@
 LDFLAGS		= @LDFLAGS@
 LIBS		= @LIBS@
