[xmp] Add OpenBSD driver and change system detection
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,7 @@ AC_INIT
 AC_ARG_WITH(libxmp, [  --with-libxmp=<path>    libxmp prefix (optional)],
   libxmp_path="$withval")
 
+AC_CANONICAL_HOST
 AC_PROG_CC
 AC_C_BIGENDIAN(AC_DEFINE(ENDIAN_BIG))
 
@@ -29,18 +30,6 @@ AC_DEFUN([AC_CHECK_DEFINED],[
 
 AC_CHECK_HEADERS(xmp.h getopt.h signal.h termios.h)
 
-system=unknown
-
-AC_CHECK_DEFINED(_WIN32,[system=win32])
-AC_CHECK_DEFINED(__BEOS__,[system=beos])
-AC_CHECK_DEFINED(__HAIKU__,[system=beos])
-
-if test "$system" = "unknown"; then
-  AC_CHECK_HEADER(CoreAudio/CoreAudio.h,,[
-    AC_CHECK_HEADERS(sys/soundcard.h alsa/asoundlib.h sndio.h sys/audioio.h)
-  ])
-fi
-
 if test "${ac_cv_header_xmp_h}" = "yes"; then
   AC_CHECK_LIB(xmp,xmp_player_start,,
     AC_MSG_ERROR(Can't find libxmp))
@@ -48,44 +37,61 @@ else
   AC_MSG_ERROR(Can't find libxmp header files)
 fi
 
-case "$system" in
-beos)
-  AC_DEFINE(SOUND_BEOS)
-  DRIVERS="${DRIVERS} sound_beos.o"
-  LIBS="${LIBS} -lmedia -lbe"
+case "$host_cpu" in
+powerpc64)
+  CFLAGS="${CFLAGS} -m64"
+  LDFLAGS="${LDFLAGS} -m64"
   ;;
-win32)
-  AC_DEFINE(SOUND_WIN32)
-  DRIVERS="${DRIVERS} sound_win32.o"
-  LIBS="${LIBS} -lwinmm"
-  ;;
-*)
+esac
+
+AC_CHECK_HEADERS(sys/soundcard.h machine/soundcard.h alsa/asoundlib.h sys/audioio.h)
+if test "${ac_cv_header_sys_soundcard_h}" = "yes" -o "${ac_cv_header_machine_soundcard_h}" = "yes"; then
+  AC_DEFINE(SOUND_OSS)
+  DRIVERS="${DRIVERS} sound_oss.o"
+fi
+if test "${ac_cv_header_alsa_asoundlib_h}" = "yes"; then
+  AC_DEFINE(SOUND_ALSA)
+  DRIVERS="${DRIVERS} sound_alsa.o"
+  LIBS="${LIBS} -lasound"
+fi
+
+case "${host_os}" in
+darwin*)
+  AC_CHECK_HEADER(CoreAudio/CoreAudio.h)
   if test "${ac_cv_header_CoreAudio_CoreAudio_h}" = "yes"; then
     AC_DEFINE(SOUND_COREAUDIO)
     DRIVERS="${DRIVERS} sound_coreaudio.o"
     LIBS="${LIBS} -framework AudioToolbox -framework AudioUnit -framework CoreServices"
-  else
-    if test "${ac_cv_header_sndio_h}" = "yes"; then
-      AC_DEFINE(SOUND_SNDIO)
-      DRIVERS="${DRIVERS} sound_sndio.o"
-      LIBS="${LIBS} -lsndio"
-    fi
-    if test "${ac_cv_header_sys_audioio_h}" = "yes"; then
-      AC_DEFINE(SOUND_BSD)
-      DRIVERS="${DRIVERS} sound_bsd.o"
-    fi
-    if test "${ac_cv_header_sys_soundcard_h}" = "yes"; then
-      AC_DEFINE(SOUND_OSS)
-      DRIVERS="${DRIVERS} sound_oss.o"
-    fi
-    if test "${ac_cv_header_alsa_asoundlib_h}" = "yes"; then
-      AC_DEFINE(SOUND_ALSA)
-      DRIVERS="${DRIVERS} sound_alsa.o"
-      LIBS="${LIBS} -lasound"
-    fi
   fi
   ;;
+openbsd*)
+  AC_CHECK_HEADER(sndio.h)
+  if test "${ac_cv_header_sndio_h}" = "yes"; then
+    AC_DEFINE(SOUND_SNDIO)
+    DRIVERS="${DRIVERS} sound_sndio.o"
+    LIBS="${LIBS} -lsndio"
+  fi
+  if test "${ac_cv_header_sys_audioio_h}" = "yes"; then
+    AC_DEFINE(SOUND_OPENBSD)
+    DRIVERS="${DRIVERS} sound_openbsd.o"
+  fi
+  ;;
+cygwin*|mingw*)
+  AC_DEFINE(SOUND_WIN32)
+  DRIVERS="${DRIVERS} sound_win32.o"
+  LIBS="${LIBS} -lwinmm"
+  ;;
+beos*|haiku*)
+  AC_DEFINE(SOUND_BEOS)
+  DRIVERS="${DRIVERS} sound_beos.o"
+  LIBS="${LIBS} -lmedia -lbe"
+  ;;
 esac
+
+if test -z "${DRIVERS}" -a "${ac_cv_header_sys_audioio_h}" = "yes"; then
+  AC_DEFINE(SOUND_BSD)
+  DRIVERS="${DRIVERS} sound_bsd.o"
+fi
 
 dnl XMP_TRY_COMPILE(<message>,<cache-var>,<flags>,<program>,<ifyes>,<ifno>)
 define(XMP_TRY_COMPILE,[
