--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,8 @@ SYSCONFDIR	= @sysconfdir@/xmp
 SHELL		= /bin/sh
 
 DIST		= xmp-$(VERSION)
-DFILES		= README INSTALL configure configure.ac Makefile.in install-sh
+DFILES		= README INSTALL configure config.sub config.guess install-sh \
+		  configure.ac Makefile.in
 DDIRS		= src
 V		= 0
 DRIVERS		= @DRIVERS@
