[xmp] Add win32 driver to dist package
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,8 @@ SRC_DFILES	= Makefile xmp.1 $(SRC_OBJS:.o=.c) common.h getopt.h list.h \
 		  sound.h sound_alsa.c sound_coreaudio.c sound_oss.c \
 		  sound_sndio.c sound_netbsd.c sound_bsd.c sound_solaris.c \
 		  sound_beos.c sound_ahi.c sound_dart.c sound_hpux.c \
-		  sound_aix.c sound_pulseaudio.c sound_qnx.c sound_alsa05.c
+		  sound_aix.c sound_pulseaudio.c sound_qnx.c sound_alsa05.c \
+		  sound_win32.c
 SRC_PATH	= src
 
 SRC_OBJS += $(DRIVERS)
