[xmp] Add missing license and credits file
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -18,8 +18,8 @@ SHELL		= /bin/sh
 V		= 0
 
 DIST		= xmp-$(VERSION)
-DFILES		= README INSTALL configure config.sub config.guess install-sh \
-		  configure.ac Makefile.in $(MODULES)
+DFILES		= README INSTALL COPYING CREDITS configure config.sub \
+		  config.guess install-sh configure.ac Makefile.in $(MODULES)
 DDIRS		= src
 MODULES		= delicate_oooz!.mod
 DRIVERS		= @DRIVERS@
