[xmp] Add configuration file reader
Port the configuration file reader from xmp 3.5 to 4.0. Module-specific
configuration still not ported.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,8 @@
 VERSION	= 3.9.1
 
 CC		= @CC@
-CFLAGS		= -c -Wall @CFLAGS@ @DEFS@ @CPPFLAGS@
+CFLAGS		= -c -Wall @CFLAGS@ @DEFS@ @CPPFLAGS@ \
+		  -DSYSCONFDIR=\"$(SYSCONFDIR)\"
 LD		= @CC@
 LDFLAGS		= @LDFLAGS@
 LIBS		= @LIBS@
