[xmp] Parse module-specific configuration file
Certain modules need specific adjustments to play correctly. It's not
possible to automatically detect these modules, so a module-specific
configuration file was added. Adjustments include: workaround for
module conversion errors, differences between protracker versions,
and custom replay parameters for specific modules.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -38,8 +38,8 @@ install-docs: $(SRC_PATH)/xmp.1
 	@[ -d $(DESTDIR)$(MANDIR) ] || mkdir -p $(DESTDIR)$(MANDIR)
 	@$(INSTALL) -m644 $+ $(DESTDIR)$(MANDIR)
 
-install-conf: $(SRC_PATH)/xmp.conf
-	@echo Installing configuration file in $(DESTDIR)$(SYSCONFDIR)
+install-conf: $(SRC_PATH)/xmp.conf $(SRC_PATH)/modules.conf
+	@echo Installing configuration files in $(DESTDIR)$(SYSCONFDIR)
 	@[ -d $(DESTDIR)$(SYSCONFDIR) ] || mkdir -p $(DESTDIR)$(SYSCONFDIR)
 	@$(INSTALL) -m644 $+ $(DESTDIR)$(SYSCONFDIR)
 
