--- a/Makefile.in
+++ b/Makefile.in
@@ -19,8 +19,9 @@ SHELL		= /bin/sh
 V		= 0
 
 DIST		= xmp-$(VERSION)
-DFILES		= README INSTALL COPYING CREDITS configure config.sub \
-		  config.guess install-sh configure.ac Makefile.in $(MODULES)
+DFILES		= README INSTALL COPYING CREDITS Changelog configure \
+		  config.sub config.guess install-sh configure.ac Makefile.in \
+		  $(MODULES)
 DDIRS		= src
 MODULES		= delicate_oooz!.mod
 DRIVERS		= @DRIVERS@
