Publish the maximum frame buffer size
If the user wants to copy buffer data around, it's useful to know the
maximum data buffer size.

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -44,7 +44,7 @@ binaries: src/xmp
 clean:
 	@rm -f $(OBJS)
 
-install: install-xmp install-docs
+install: install-xmp install-docs install-conf
 
 depend:
 	@echo Building dependencies...
