[xmp] Fix pulseaudio detection in configuration
Reported by Emanuel Haupt:

Here is a small patch for the pulseaudio option. Without it the linker
fails to find sound_pulseaudio.o.

sed -e 's|\(pulseaudio\.o\)|sound_\1|' configure
sed -e 's|\(pulseaudio\.o\)|sound_\1|' configure.ac

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -88,7 +88,7 @@ if test "${enable_pulseaudio}" = "yes"; then
   AC_CHECK_HEADER(pulse/simple.h)
   if test "${ac_cv_header_pulse_simple_h}" = "yes"; then
     AC_DEFINE(SOUND_PULSEAUDIO)
-    DRIVERS="${DRIVERS} pulseaudio.o"
+    DRIVERS="${DRIVERS} sound_pulseaudio.o"
     LIBS="${LIBS} -lpulse-simple -lpulse"
   fi
 fi
