[xmp] Fix player flag setting
Don't set flags for the current module based on flags for the previous
module (which may include module quirks).

Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/modules.conf
+++ b/src/modules.conf
@@ -28,6 +28,6 @@ fixloop = yes
 [70aa034dfb2f1f73d9fdbafe131bb701]
 vblank = yes
 
-# Klisje paa klisje (added by Kjetil Torgrim Homme)
+# "klisje paa klisje" (added by Kjetil Torgrim Homme)
 [e998012c700eb43af0321711305829b2]
 vblank = yes
