--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 VERSION	= 4.0.4
 
 CC		= @CC@
-CFLAGS		= -c -Wall @CFLAGS@ @DEFS@ @CPPFLAGS@ \
+CFLAGS		= -c @CFLAGS@ @DEFS@ @CPPFLAGS@ \
 		  -DSYSCONFDIR=\"$(SYSCONFDIR)\"
 LD		= @CC@
 LDFLAGS		= @LDFLAGS@
