--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 # Binary files
 *.o
-src/xmp
 *.gz
 
 # Modules
 *.it
 
 # Generated files
-autom4te.cache
-config.log
-config.status
-configure
-depend
+.deps
+Makefile
+Makefile.in
 
+/aclocal.m4
+/autom4te.cache/
+/build-aux/
+/config.*
+/configure
